# ChangeLog for net-dns/dnsmasq
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.199 2010/11/19 16:04:20 chutzpah Exp $

  19 Nov 2010; Patrick McLean <chutzpah@gentoo.org> files/dnsmasq-init:
  Add "use logger" to init script as dnsmasq fails to stop if no logger is
  running (bug #342463).

  25 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> dnsmasq-2.55.ebuild:
  Missing dev-util/pkgconfig DEPEND wrt #342437 by "Maxim".

*dnsmasq-2.55 (10 Jun 2010)

  10 Jun 2010; Patrick McLean <chutzpah@gentoo.org> -dnsmasq-2.50.ebuild,
  -dnsmasq-2.51.ebuild, +dnsmasq-2.55.ebuild:
  Version bump.

  24 May 2010; Pacho Ramos <pacho@gentoo.org> dnsmasq-2.52.ebuild:
  stable amd64, bug 316715

  20 May 2010; Jeroen Roovers <jer@gentoo.org> dnsmasq-2.52.ebuild:
  Stable for HPPA (bug #316715).

  19 May 2010; Raúl Porcel <armin76@gentoo.org> dnsmasq-2.52.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #316715

  13 May 2010; Joseph Jezak <josejx@gentoo.org> dnsmasq-2.52.ebuild:
  Marked ppc stable for bug #316715.

  11 May 2010; Brent Baude <ranger@gentoo.org> dnsmasq-2.52.ebuild:
  stable ppc64, bug 316715

  10 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> dnsmasq-2.52.ebuild:
  x86 stable wrt bug #316715

*dnsmasq-2.52 (10 Feb 2010)

  10 Feb 2010; Patrick McLean <chutzpah@gentoo.org> +dnsmasq-2.52.ebuild:
  Version bump (bug #301978). Remove workaround for bug #296204 as it is no
  longer needed.

  14 Jan 2010; Patrick McLean <chutzpah@gentoo.org> dnsmasq-2.51.ebuild:
  Add a die call if DBUS USE flag is enable with DHCP off, this is a
  workaround for bug #296204 until 2.52 is out.

  07 Dec 2009; Patrick McLean <chutzpah@gentoo.org> dnsmasq-2.51.ebuild:
  Add dep on net-dns/libidn with USE=nls.

*dnsmasq-2.51 (07 Dec 2009)

  07 Dec 2009; Patrick McLean <chutzpah@gentoo.org> +dnsmasq-2.51.ebuild:
  Version bump (bug #295470).
