@@ -8,24 +8,26 @@ AUX dnsmasq.confd 140 RMD160 33f6370377b38bf33acab72d8de86cba5e197d79 SHA1 83461
 AUX resolvconf.dnsmasq 4078 RMD160 8a290b908cf975e0cbb2b845c5c492d8a3f6e2aa SHA1 70f4ca6e6cbd91b700e7e82696d5508f3c1686dd SHA256 c3cf0b2249267aaf921f335ec10cf140db570b2aa4009be789a215c47323a1d5
 DIST dnsmasq-2.52.tar.lzma 304860 RMD160 38e05bfd746d618c0ac51ae245540b008474bde7 SHA1 5f4a7b52b3459a4f98ef25f3c95aef910c89dc21 SHA256 1f7834618181ef2a2feadb65a8a71e6fb75f5dfa07759df295726c2db765cca0
 DIST dnsmasq-2.55.tar.lzma 320116 RMD160 2e6f623da3f453a2c6086dc80315a9308a4245ef SHA1 0bd62b3846bad2ed5e243b1b8aae59c2e0e20da5 SHA256 ae36d8031640b3202d196170025ee13e6d9240cb6d523a2a3e4f7ab1289e1473
-EBUILD dnsmasq-2.52.ebuild 1694 RMD160 4d928967afef64ec1594b2baf7413dfd4b283b18 SHA1 437cd3ff12d057e91b3694b5f65c569ac213ec1d SHA256 0a56e302f180cd748868836359863dc9f6f79efafdb433a4ea9361b749332b57
-EBUILD dnsmasq-2.55.ebuild 1729 RMD160 d5c65ad9ea90f5f1481fb90055557864f5bda431 SHA1 d09ab5844c228ab29f27333c70e43aebf85528ef SHA256 5bab28202270accdebc34624d69a039b2301aa8040585ed8cb48e3b5cb56f390
-MISC ChangeLog 25685 RMD160 46b4a3a32222af966a6d789186f7faea8f05975a SHA1 c383252d6e703235454d2f8a581577feb53b1270 SHA256 c664819f22eca60fa26ac49f72b6053a6abb19b73a3681d2fd1c1a4bdcbdf90e
+DIST dnsmasq-2.56.tar.lzma 331543 RMD160 448787766684dc354582423e234825c808df557f SHA1 f6e6f488798c5b0d84698abf4801f922ff78e36c SHA256 36341d2534801cae3463489b79d912f9db8b5dbf5527efd69821a7984def2c33
+EBUILD dnsmasq-2.52.ebuild 1697 RMD160 059361530d2c65008fc39757a96c0f70ee9ab18d SHA1 a09dd2685ddc664e3f2b8065be82afcd61082250 SHA256 4dcd5cafff159a8377381a28b438b7604fed1e959d4d120d8f0175665e7e55ae
+EBUILD dnsmasq-2.55.ebuild 1728 RMD160 87ab8a4440f21c7ae141f25fa06e9606e1971b4d SHA1 e5b69d5a3dbce4ef3f117d0107e6bdb8291472d3 SHA256 c9cc19c5ab05fe73e028a34c6d5456f7032d04b77c86f497a70a07002fcadfd3
+EBUILD dnsmasq-2.56.ebuild 1728 RMD160 31d2a20a181e719ec84c176c53577e125a293ffa SHA1 83df230db44bdfe939d0f7046eb7000876d0965a SHA256 de365c3cbd2b0deea2cd5ddac0570f91c12da8e5a69f1905133a3bbe358b9bbc
+MISC ChangeLog 25805 RMD160 462322451f2a2acbb4c2740333ecdfbaa8b18189 SHA1 251d3073d63baf70ea30a3d315899924e92b4f7d SHA256 018d39063aeef53da1c522efe44f756cab31106ce8fc7cc334bd6f13b09b1364
 MISC metadata.xml 409 RMD160 059cae7fc03f12c391df3954a25b50b98f8fd616 SHA1 3b262afb2f3281150f03de7e7ee5019d1ddf3a32 SHA256 b8cb70c6cedee588056993ffa8a720fcb3248dc8d10bf6397910cf8fed07b4e2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJM5qAUAAoJEHy/RO9cNQiD150P/2ZDqEHf4CW+5fCsEcS3KyV7
-np6ctHXPiJ7jvCDD0shGmpO/hQ61Rm3uozsc2iA7BvhdyaufwOXjyyfnHRfP4q7Y
-V42pct090mchB9z7AJiGTEZPA/3sR1c2E2Rg+IKr6eBv7b32slX+xvQJRAAGLCrx
-oWyZmaPXWijs03wIUyeWMoNtl/5lSIxAGQDcoNZ/AozibxiE0cNWj9L/A0NiZyQV
-jFpQm7626mNr7VFA16ZAk4aFD26Lo0Dn6ICZRFXMLYGsJ2Zkz85QPsAdtizkY91z
-qJBb3Cndfnd6R7v8/6PCWPOEknt+GFLY6D7CxihqBvHOK0qrjzDHgvPZ7vgMzc8K
-X24O0hnSEFeQbbX7D7rSxaoQMJvavTtb9zWn00q5XP1WY6hwI3VsiqoYk+2ekbZ8
-n6ux/kXOQ0dLfqWfwLR4k9C1W237h9N6qiYaGoUf3U+mC8qYFshuThxmKemdG8rp
-y3eXq9f+RZquux+yvfUhE37LO9pOINwMxuH0uvLJbwD7nSA1DVtBFBGTAIEzKRE+
-FZ29+t1tZr6DdWjryrLs5R6KTWWrCOxvvkbKpecDhKl/Ry97OCLt6dLKBqjdJkgH
-yQ/XNpn7P8MsgESh9iJCEUUNkFo75M/RdiXupDaF30VFGUV576dHrW2pJxnAj1Il
-8FOCWFN/ggMGNu6AB17K
-=mOPp
+iQIcBAEBAgAGBQJNXCaEAAoJEHy/RO9cNQiDAC0P/R8GYg9djpaiPAjg4QPBHDYB
+Lb5Fc26LF2/jos/0LRMPCBszCZFJAZuxlbao6RaZfC+nFjOYSbjQPCHKgv+aPvtB
+d1dQpfodl64yUsx7IBuRl8VZJ8Wr70FjrxW5PPJDbMExnBFuQw7+LnqrBKkrM8YG
+BlASe9VJ6H/pTSvaYZP0ecL/mNSyJcr2ln5WCyEuf5apnEst861afkUqYF4Ekw0z
+qaLqDULGavmRIURIUxu9TRKCrUUNa8wtjEfe+l7y4GxTO6XUHwbMYI+saAcsuWsW
+GKPv+IGABr+/fGqUvdwAiGOYlH4TPTr6tg00dhs5rMACj2vnSx34+4uyPtpmfUn9
+NF0xyfC2cE6ORyd2RRYqdMdr33oZSUp/n37TpVEmKq4jovlbXiH7UWfQGP8IqTx6
+sDz/Fl9emM0EHIJ/HsOWsMLNdoClOjcN/HuX80FeID2J46RypelUrcC0G8+qjq9o
+9rbrK828OF2BMfVUoPutVgt0SbgnoBYQqyIalnDsoJghV4lVXiMXmlZ6JxNuWpTb
+PnYvMWFcAI30EWLyAtnXNozqOXSDciPMvvZYi5trjM8kfN0beUUkOx1rYRR09o8n
+GvZTDqbdO23452Sfd8ReOrCvnMCpBc8a0zUmmaaOdGo4ipg2ij0ZW1Q/HMlBKive
+LG3yESqDNftEhwNtkqHj
+=0KZ3
 -----END PGP SIGNATURE-----
