@@ -1,6 +1,11 @@
 # ChangeLog for net-dns/dnsmasq
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.199 2010/11/19 16:04:20 chutzpah Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.200 2011/02/16 19:33:07 chutzpah Exp $
+
+*dnsmasq-2.56 (16 Feb 2011)
+
+  16 Feb 2011; Patrick McLean <chutzpah@gentoo.org> +dnsmasq-2.56.ebuild:
+  Version bump.
 
   19 Nov 2010; Patrick McLean <chutzpah@gentoo.org> files/dnsmasq-init:
   Add "use logger" to init script as dnsmasq fails to stop if no logger is
